<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Views</string>

    <string name="activity_main_name">Main Activity</string>
    <string name="activity_main_toolbar_title">Toolbar Title</string>

    <string name="activity_settings_name">Settings Activity</string>

    <string name="fragment_detail_buy">Buy</string>
    <string name="fragment_detal_action_refresh">Refresh</string>
    <string name="fragment_detal_action_add">Add</string>

    <string name="notification_title">Item ordered</string>
    <string name="notification_text">The selected item has been ordered and will be shipped in a week.</string>

    <string name="dialog_about_title">About</string>
    <string name="dialog_about_message">This is Example18 app which demonstrates usage of toasts, notifications, dialogs, preferences, toolbars and navigation drawers</string>
    <string name="dialog_about_yes">OK</string>
    <string name="dialog_about_no">Cancel</string>

    <string name="pref_sync">pref_sync</string>
    <string name="pref_sync_title">Allow Sync</string>
    <string name="pref_sync_summ">Allow app to sync data automatically if Wi-fi is available</string>
    <string name="pref_syncConnectionType">Sync interval</string>
    <string name="pref_sync_list">pref_sync_list</string>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_home_long">Show All Products</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_Settings_long">Change App Settings</string>
    <string name="drawer_about">About</string>
    <string name="drawer_about_long">About Us</string>

    <string name="autosync_problem">Automatic Sync problem</string>
    <string name="no_internet">Bad news, no internet connection</string>
    <string name="autosync_warning">Automatic Sync warning</string>
    <string name="connect_to_wifi">Please connect to wifi to sync data</string>
    <string name="autosync">Automatic Sync</string>
    <string name="good_news_sync">Good news, everything is sync now.</string>
    <string name="auto_data_sync">Auto data sync</string>
    <string name="sync_settings">sync_settings</string>
    <string name="notif_cat_title">Notifications</string>
    <string name="notif_cat_key">notif_settings</string>
    <string name="pref_notif">pref_notif</string>
    <string name="pref_notif_summ">Show the message as a Notification</string>
    <string name="pref_notif_title">Use Notification</string>
    <string name="tbaction_test">Test</string>

</resources>