<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory 
        android:title="@string/auto_data_sync"
        android:key="@string/sync_settings">
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_sync"
            android:summary="@string/pref_sync_summ"
            android:title="@string/pref_sync_title" />

        <ListPreference
            android:dependency="@string/pref_sync"
            android:dialogTitle="@string/pref_syncConnectionType"
            android:entries="@array/pref_syncConnectionTypes_entries"
            android:entryValues="@array/pref_syncConnectionTypes_values"
            android:key="@string/pref_sync_list"
            android:title="@string/pref_syncConnectionType" 
            android:summary="%s"
            android:defaultValue="1"/>
        
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notif_cat_title"
        android:key="@string/notif_cat_key">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_notif"
            android:summary="@string/pref_notif_summ"
            android:title="@string/pref_notif_title"/>
    </PreferenceCategory>


</PreferenceScreen>